[ui] Fix contrast on internal links in text in dark mode

--- a/src/components/editor/lexicalplugins/internallink/DatabasePageLink.css
+++ b/src/components/editor/lexicalplugins/internallink/DatabasePageLink.css
@@ -1,5 +1,5 @@
 .DatabasePageLink {
-  color: var(--link-internal);
+  color: var(--link-internal-pill);
   text-decoration: none;
   cursor: pointer;
   position: relative;
